fix : nav search bar - overflowing problem

--- a/src/app/components/layout/Nav/style.module.scss
+++ b/src/app/components/layout/Nav/style.module.scss
@@ -5,20 +5,34 @@
 }
 
 .container {
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin: 0 auto;
   padding: 20px 25px;
   max-width: $layoutMaxWidth;
   width: 100%;
+  display: grid;
+  grid-template-columns: 100px 1fr 200px;
+  align-items: center;
+  grid-template-rows: minmax(100px);
+
+  @media #{$tablet} {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 20px;
+  }
 }
 
 .search {
   flex-grow: 1;
   display: flex;
   margin: 0 20px;
+
+  @media #{$tablet} {
+    margin: 0;
+    grid-area: 2 / 1 / 3 / 3;
+  }
+}
+
+.right-buttons-containers {
+  justify-self: end;
 }
 
 // NavRightButtons
